# api

./: .gitignore  Cargo.toml  README.md  api.code-workspace  openapi.yml
.cargo/: config.toml
api/: Cargo.toml
api/src/: config.rs  error.rs  lib.rs  main.rs  trace.rs
api/src/data/: mod.rs  user.rs
api/src/db/: mod.rs
api/src/db/postgres/: art.rs  feed.rs  mod.rs  summary.rs  user.rs  util.rs
api/src/http/: article.rs  auth.rs  feed.rs  mdw.rs  mod.rs  summary.rs
api/src/mdl/: mod.rs
api/src/svc/: art.rs  auth.rs  feed.rs  mod.rs
cli/: Cargo.toml
cli/src/: auth.rs  cmd.rs  config.rs  db.rs  feed.rs  main.rs  model.rs  subsc.rs  svc.rs  util.rs
cli/src/cmd/: mod.rs
cli/src/svc/: config.rs  db.rs  mod.rs
client-js/: package.json  pnpm-lock.yaml  tsconfig.json
client-js/src/: index.ts
client-js/tests/: auth.test.ts
client-rs/: Cargo.toml
client-rs/src/: error.rs  lib.rs
client-rs/tests/: feed.rs  summary.rs  user.rs
client-rs/tests/common/: mod.rs
newsie-api/: Cargo.toml
newsie-api/src/: lib.rs  main.rs  trace.rs
newsie-api/src/data/: error.rs  user.rs
newsie-api/src/http/: auth.rs  error.rs
newsie-api/src/svc/: auth.rs
newsie-cli/: Cargo.toml
newsie-cli/src/: auth.rs  config.rs  info.rs  main.rs  util.rs
newsie-client/: Cargo.toml
newsie-client/src/: error.rs  lib.rs
src/: config.rs  lib.rs  main.rs  trace.rs
src/data/: error.rs  feed.rs  mod.rs  user.rs
src/http/: auth.rs  error.rs  mdw.rs  mod.rs
src/svc/: auth.rs  feed.rs  mod.rs  rss.rs
tests/: auth.rs  hello.rs  root.rs  thunder-coll-api.json  thunder-env-dev.json
tests/__/: api.rs
