[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "api"

[[bin]]
name = "docgen"
required-features = ["docgen"]

[features]
default = []
docgen = ["dep:utoipa"]

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
serde = { version = "1.0.160", features = ["serde_derive"] }
thiserror = "1.0.40"
serde_json = "1.0.96"
jsonwebtoken = "8.3.0"
tokio-postgres = { version = "0.7.8", features = ["with-time-0_3"] }
deadpool-postgres = "0.10.5"
time = "0.3.20"
argon2 = "0.5.0"
futures = "0.3.28"
cookie = "0.17.0"
utoipa = { version = "3.3.0", optional = true, features = ["yaml", "openapi_extensions"] }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rss = "2.0.4"
qdrant-client = "1.3.0"
