[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "api"

[[bin]]
name = "openapi"

[features]
default = []

[dependencies]
tokio = { version = "1", features = ["full"] }
config = "0.13.3"
serde = { version = "1.0.160", features = ["serde_derive"] }
thiserror = "1.0.40"
jsonwebtoken = "8.3.0"
tokio-postgres = { version = "0.7.8", features = [
    "with-time-0_3",
    "with-uuid-1",
] }
deadpool-postgres = "0.10.5"
time = { version = "0.3.20", features = ["serde"] }
argon2 = "0.5.0"
cookie = "0.17.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rss = "2.0.4"
qdrant-client = "1.3.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "serde"] }
salvo = { version = "0.44.1", features = ["oapi", "affix"] }

[dev-dependencies]
fake = "2.6.1"
